--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,11 @@
-
 * {
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
 }
 
-
 body {
-    margin: 20%
-    justify-content: center;
+    margin: 20% justify-content: center;
 }
 
 h1 {
@@ -90,11 +87,9 @@ button {
     grid-area: formulario;
 }
 
-
-
 .grid-container {
     display: inline-block;
-    grid-template-areas: 'header' 'main' 'bottom' 'formulario' ;
+    grid-template-areas: 'header' 'main' 'bottom' 'formulario';
     grid-gap: 10px;
     background-color: #2196F3;
     padding: 10px;
@@ -105,7 +100,7 @@ button {
     line-height: 125px;
     align-items: center;
     align-content: center;
-    text-align: center;
+    text-align: center; width: 100%; margin: auto;
 }
 
 .grid-container>div {
@@ -115,7 +110,7 @@ button {
     font-size: 150px;
     line-height: 500px;
     align-items: center;
-    align-self: center;
+    align-self: center;width: 90%; margin:auto
 }
 
 form {
@@ -170,7 +165,8 @@ textarea {
     display: block;
 }
 
-div.img {;
+div.img {
     width: 500%;
-    height: auto; align: center
-}   
+    height: auto;
+    
+}
